# multisource-RAG-agent

./: README.md  main.py  pyproject.toml
backend/: api.py  main.py
data/: MOCK_DATA.csv  doc.docx  sample.txt
frontend/: app.py
frontend/handlers/: chat_handler.py  ingestion_handler.py
frontend/ui/: chat_interface.py  inputbox.py  layout.py  sidebar.py
frontend/voice/: tts.py
ingestion/: chunker.py  csv_ingest.py  docx_ingest.py  image_ingest.py  image_utilities.py  pdf_ingest.py  txt_ingest.py  web_ingest.py
rag/: chat_chain.py  persistence.py  retriever.py  vectordb_embeddings.py
vectorDB/: index.faiss  index.pkl
